# VHSystem

./: .gitattributes  .gitignore  LICENSE  README.md
VHClient/: .gitignore  AvatarClient.uproject
VHClient/Config/: DefaultEngine.ini  DefaultGame.ini
VHClient/Protos/: avatarStream.proto
VHClient/Source/: AvatarClient.Target.cs  AvatarClientEditor.Target.cs
VHClient/Source/AvatarClient/: AvatarClient.Build.cs  AvatarClient.cpp  AvatarClient.h  AvatarClientCharacter.cpp  AvatarClientCharacter.h  AvatarClientGameMode.cpp  AvatarClientGameMode.h  AvatarClientPlayerController.cpp  AvatarClientPlayerController.h
VHClient/Source/AvatarClient/Private/Core/: AvatarStreamingComponent.cpp
VHClient/Source/AvatarClient/Public/Core/: AvatarStreamingComponent.h
VHServer/: .gitignore  CMakeLists.txt  config.yaml  nlp_server.py  start_server.sh
VHServer/include/engine/business/: ai_brain.h  text_splitter.hpp
VHServer/include/engine/business/models/: audio2face_model.h  onnx_model_base.h  piper_tts_model.h
VHServer/include/engine/core/: avatar_session.h  grpc_server.h
VHServer/include/engine/infra/: buffer_pool.hpp  config_manager.hpp  logger_setup.hpp  thread_pool.hpp
VHServer/protos/: avatarStream.proto
VHServer/src/: main.cpp
VHServer/src/business/: ai_brain.cpp
VHServer/src/business/models/: audio2face_model.cpp  piper_tts_model.cpp
VHServer/src/core/: avatar_session.cpp  grpc_server.cpp
VHServer/tools/: client.py  export_dummy_v2f.py
